# vectorforth

./: .gitmodules  CMakeLists.txt  README.md
asm/: CMakeLists.txt  asm_api.h  asmcode.cpp  asmcode.h  assembler.cpp  assembler.h  namespace.h
asm.tests/: AsmCodeTests.cpp  AsmCodeTests.h  AssemblerTests.cpp  AssemblerTests.h  CMakeLists.txt  test.cpp  test_assert.cpp  test_assert.h
sf/: CMakeLists.txt  main.cpp  thread_pool.h  window.cpp  window.h
shaderforth/: CMakeLists.txt  image.h  logging.cpp  logging.h  main.cpp  pref_file.cpp  pref_file.h  settings.cpp  settings.h  shader_input.h  shader_program.cpp  shader_program.h  view.cpp  view.h
shaderforth/examples/: blueball.4th  bounce.4th  bounce512.4th  candy.4th  cells.4th  clock.4th  coffee.4th  disco.4th  fourier.4th  guy.4th  guy2.4th  heart.4th  iq_tutorial.4th  lightdrop.4th  mandelbrot.4th  mario.4th  mars.4th  moire.4th  pacman.4th  planet_of_zoom.4th  pong.4th  road.4th  serverroom.4th  simple.4th  sphere.4th  torus.4th  vectrex.4th  xortunnel.4th
vectorforth/: CMakeLists.txt  asm_aux.cpp  asm_aux.h  avx_mathfun.cpp  avx_mathfun.h  compile_data.h  compile_error.cpp  compile_error.h  compiler.cpp  compiler.h  constant_folding.cpp  constant_folding.h  context.cpp  context.h  context_defs.h  debug.cpp  debug.h  dictionary.cpp  dictionary.h  expand.cpp  expand.h  expand_data.h  namespace.h  primitives.cpp  primitives.h  sincos_table.cpp  sincos_table.h  stdlib.cpp  stdlib.h  strength_reduction.cpp  strength_reduction.h  superoperators.cpp  superoperators.h  tokenize.cpp  tokenize.h  vectorforth_api.h
vectorforth.tests/: CMakeLists.txt  compile_tests.cpp  compile_tests.h  debug_tests.cpp  debug_tests.h  math_fun_tests.cpp  math_fun_tests.h  optimize_tests.cpp  optimize_tests.h  test.cpp  test_assert.cpp  test_assert.h  tokenize_tests.cpp  tokenize_tests.h
